; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_nsembed.c_create_nsvariant.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_nsembed.c_create_nsvariant.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pCompMgr = common dso_local global i32 0, align 4
@NS_VARIANT_CONTRACTID = common dso_local global i32 0, align 4
@IID_nsIWritableVariant = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"Could not get nsIVariant\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @create_nsvariant() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* null, i32** %2, align 8
  %4 = load i32, i32* @pCompMgr, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %0
  store i32* null, i32** %1, align 8
  br label %19

7:                                                ; preds = %0
  %8 = load i32, i32* @pCompMgr, align 4
  %9 = load i32, i32* @NS_VARIANT_CONTRACTID, align 4
  %10 = bitcast i32** %2 to i8**
  %11 = call i32 @nsIComponentManager_CreateInstanceByContractID(i32 %8, i32 %9, i32* null, i32* @IID_nsIWritableVariant, i8** %10)
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i64 @NS_FAILED(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %7
  %16 = call i32 @ERR(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %17

17:                                               ; preds = %15, %7
  %18 = load i32*, i32** %2, align 8
  store i32* %18, i32** %1, align 8
  br label %19

19:                                               ; preds = %17, %6
  %20 = load i32*, i32** %1, align 8
  ret i32* %20
}

declare dso_local i32 @nsIComponentManager_CreateInstanceByContractID(i32, i32, i32*, i32*, i8**) #1

declare dso_local i64 @NS_FAILED(i32) #1

declare dso_local i32 @ERR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
